aya-packer/src/config/snapshots/aya_packer__config__lexer__tests__simple_config.snap
---
source: aya-packer/src/config/lexer.rs
expression: tokens
---
[
    Token {
        offset: ByteOffset {
            start: 13,
            end: 17,
        },
        kind: Ident,
    },
    Token {
        offset: ByteOffset {
            start: 19,
            end: 20,
        },
        kind: Equal,
    },
    Token {
        offset: ByteOffset {
            start: 21,
            end: 29,
        },
        kind: String,
    },
    Token {
        offset: ByteOffset {
            start: 43,
            end: 50,
        },
        kind: Ident,
    },
    Token {
        offset: ByteOffset {
            start: 52,
            end: 53,
        },
        kind: Equal,
    },
    Token {
        offset: ByteOffset {
            start: 54,
            end: 76,
        },
        kind: String,
    },
]
