aya-packer/src/config/snapshots/aya_packer__config__lexer__tests__sprite_array.snap
---
source: aya-packer/src/config/lexer.rs
expression: tokens
---
[
    Token {
        offset: ByteOffset {
            start: 13,
            end: 17,
        },
        kind: Ident,
    },
    Token {
        offset: ByteOffset {
            start: 19,
            end: 20,
        },
        kind: Equal,
    },
    Token {
        offset: ByteOffset {
            start: 21,
            end: 29,
        },
        kind: String,
    },
    Token {
        offset: ByteOffset {
            start: 43,
            end: 49,
        },
        kind: Ident,
    },
    Token {
        offset: ByteOffset {
            start: 51,
            end: 52,
        },
        kind: Equal,
    },
    Token {
        offset: ByteOffset {
            start: 53,
            end: 54,
        },
        kind: LeftBracket,
    },
    Token {
        offset: ByteOffset {
            start: 71,
            end: 84,
        },
        kind: String,
    },
    Token {
        offset: ByteOffset {
            start: 86,
            end: 87,
        },
        kind: Comma,
    },
    Token {
        offset: ByteOffset {
            start: 104,
            end: 117,
        },
        kind: String,
    },
    Token {
        offset: ByteOffset {
            start: 119,
            end: 120,
        },
        kind: Comma,
    },
    Token {
        offset: ByteOffset {
            start: 137,
            end: 150,
        },
        kind: String,
    },
    Token {
        offset: ByteOffset {
            start: 152,
            end: 153,
        },
        kind: Comma,
    },
    Token {
        offset: ByteOffset {
            start: 166,
            end: 167,
        },
        kind: RightBracket,
    },
]
